--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,9 +10,9 @@ permissions:
 
 env:
   AWS_REGION: us-east-1
-  BUCKET_NAME: realcloud-tfstate-bucket-001
+  BUCKET_NAME: physicstutors-002
   TF_KEY: eks/terraform.tfstate
-  TF_REGION: us-east-2
+  TF_REGION: us-east-1
 
 jobs:
   terraform:
@@ -26,8 +26,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::361769567498:role/GitHubActionsTerraformRole
-          aws-region: us-east-2
+          role-to-assume: arn:aws:iam::755852738025:role/Aws-Githubaction-Connection
+          aws-region: us-east-1
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
